fix: query not showing when view is changed

--- a/media/css/query.css
+++ b/media/css/query.css
@@ -158,7 +158,7 @@
 .dry-run-stat {
   color: #02131c;
   font-weight: 500;
-  background-color: #ebf5ff;
+  background-color: #bcc9d6;
   border-left: 4px solid #007acc;
   border-radius: 3px;
   padding: 3px 5px;
